# csvquery-rs

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/csvquery/: data_cell.rs  data_row.rs  data_schema.rs  data_types.rs  error.rs  logical_exprs.rs  logical_plans.rs  mod.rs  query.rs  scalar.rs
src/csvquery/data_block/: data_array.rs  data_block.rs  mod.rs
src/csvquery/data_sources/: csv.rs  data_source.rs  mod.rs
src/csvquery/data_streams/: mod.rs  stream.rs  stream_channel.rs  stream_csv.rs  stream_empty.rs  stream_transformed.rs
src/csvquery/datablock/: data_block.rs
src/csvquery/datatable/: csv_table.rs  data_table.rs  mod.rs
src/csvquery/execs/: exec.rs  exec_csv.rs  exec_merge.rs  exec_scan.rs  exec_transform.rs  mod.rs  pipeline.rs
src/csvquery/execs/expressions/: expr.rs  expr_binary.rs  (+3 more)
src/csvquery/logical_plans/: mod.rs  plan_aggregate.rs  plan_builder.rs  plan_expr.rs  plan_node.rs  plan_projection.rs  plan_scan.rs  plan_selection.rs  plan_utils.rs  plan_visitor.rs  tests.rs
src/csvquery/plans/: mod.rs  plan_aggregate.rs  plan_builder.rs  plan_expr.rs  plan_node.rs  plan_projection.rs  plan_scan.rs  plan_selection.rs  plan_utils.rs  plan_visitor.rs  tests.rs
src/csvquery/processors/: mod.rs  pipeline.rs  pipeline_builder.rs  processor.rs  processor_merge.rs  processor_scan.rs  processor_transform.rs
src/csvquery/streams/: mod.rs  stream.rs  stream_channel.rs  stream_csv.rs  stream_empty.rs  stream_transformed.rs
src/csvquery/table_data/: data_row.rs  data_schema.rs  data_set.rs  data_type.rs  mod.rs
tests/: aggregate_simple.csv
