[package]
name = "csvquery-rs"
version = "0.1.0"
authors = ["Li Yazhou <me.ssword@gmail.com>"]
edition = "2018"

[dependencies]
thiserror = "1.0"
sqlparser = "0.8"
futures = "0.3"
async-trait = "0.1"
arrow = { path = "../arrow/rust/arrow", version = "4.0.0-SNAPSHOT" }
tokio = { version = "1.0", features = ["macros", "rt", "rt-multi-thread", "signal", "sync"] }
